--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "AbT",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
